argocd.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/argocd`)          
      services:
        - name: argocd-server
          namespace: argocd
          port: 80
    - kind: Rule
      match: PathPrefix(`/argocd`)  && Headers(`Content-Type`, `application/grpc`)
      priority: 11      
      services:
        - name: argocd-server
          namespace: argocd
          port: 80
          scheme: h2c
