wishlist_ingres.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wishlist-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/app`)
      middlewares:
        - name: app-stripprefix
          namespace: default
      services:
        - name: wishlist-app-service
          port: 8080
    - kind: Rule
      match: PathPrefix(`/catalog`)
      middlewares:
        - name: catalog-stripprefix
          namespace: default
        - name: basic-auth
          namespace: default
      services:
        - name: wishlist-catalog-service
          port: 8081
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: default
spec:
  basicAuth:
    secret: htpasswd
